# guppy

./: .git-blame-ignore-revs  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Justfile  README.md  clippy.toml
cargo-guppy/: Cargo.toml  README.md  README.tpl
cargo-guppy/src/: core.rs  diff.rs  lib.rs  main.rs  mv.rs
fixtures/: Cargo.toml
fixtures/guppy/hakari/: metadata_guppy_44b62fa-0.toml  metadata_guppy_44b62fa-1.toml  metadata_guppy_44b62fa-2.toml  metadata_guppy_44b62fa-3.toml  metadata_guppy_78cb7e8-0.toml  metadata_guppy_78cb7e8-1.toml  metadata_guppy_78cb7e8-2.toml  metadata_guppy_78cb7e8-3.toml  metadata_guppy_869476c-0.toml  metadata_guppy_869476c-1.toml  metadata_guppy_869476c-2.toml  metadata_guppy_869476c-3.toml  metadata_guppy_c9b4f76-0.toml  metadata_guppy_c9b4f76-1.toml  metadata_guppy_c9b4f76-2.toml  metadata_guppy_c9b4f76-3.toml
fixtures/guppy/summaries/: metadata_guppy_44b62fa-0.toml  metadata_guppy_44b62fa-1.toml  metadata_guppy_44b62fa-2.toml  metadata_guppy_44b62fa-3.toml  metadata_guppy_44b62fa-4.toml  metadata_guppy_44b62fa-5.toml  metadata_guppy_44b62fa-6.toml  metadata_guppy_44b62fa-7.toml  metadata_guppy_78cb7e8-0.toml  metadata_guppy_78cb7e8-1.toml  metadata_guppy_78cb7e8-2.toml  metadata_guppy_78cb7e8-3.toml  metadata_guppy_78cb7e8-4.toml  metadata_guppy_78cb7e8-5.toml  metadata_guppy_78cb7e8-6.toml  metadata_guppy_78cb7e8-7.toml  metadata_guppy_869476c-0.toml  metadata_guppy_869476c-1.toml  metadata_guppy_869476c-2.toml  metadata_guppy_869476c-3.toml  metadata_guppy_869476c-4.toml  metadata_guppy_869476c-5.toml  metadata_guppy_869476c-6.toml  metadata_guppy_869476c-7.toml  metadata_guppy_c9b4f76-0.toml  metadata_guppy_c9b4f76-1.toml  metadata_guppy_c9b4f76-2.toml  metadata_guppy_c9b4f76-3.toml  metadata_guppy_c9b4f76-4.toml  metadata_guppy_c9b4f76-5.toml  metadata_guppy_c9b4f76-6.toml  metadata_guppy_c9b4f76-7.toml
fixtures/invalid/: invalid_default_member.json  named_feature_self_loop.json  workspace_member_different_drive.json
fixtures/large/: hyper_util_7afb1ed.json  metadata_libra_9ffd93b.json  metadata_libra_f0091a4.json
fixtures/large/hakari/: hyper_util_7afb1ed-0.toml  hyper_util_7afb1ed-1.toml  hyper_util_7afb1ed-2.toml  hyper_util_7afb1ed-3.toml  metadata_libra-0.toml  metadata_libra-1.toml  metadata_libra-2.toml  metadata_libra-3.toml  metadata_libra_9ffd93b-0.toml  metadata_libra_9ffd93b-1.toml  metadata_libra_9ffd93b-2.toml  metadata_libra_9ffd93b-3.toml  metadata_libra_f0091a4-0.toml  metadata_libra_f0091a4-1.toml  metadata_libra_f0091a4-2.toml  metadata_libra_f0091a4-3.toml  mnemos_b3b4da9-0.toml  mnemos_b3b4da9-1.toml  mnemos_b3b4da9-2.toml  mnemos_b3b4da9-3.toml
fixtures/large/summaries/: hyper_util_7afb1ed-0.toml  hyper_util_7afb1ed-1.toml  hyper_util_7afb1ed-2.toml  hyper_util_7afb1ed-3.toml  hyper_util_7afb1ed-4.toml  hyper_util_7afb1ed-5.toml  hyper_util_7afb1ed-6.toml  hyper_util_7afb1ed-7.toml  metadata_libra-0.toml  metadata_libra-1.toml  metadata_libra-2.toml  metadata_libra-3.toml  metadata_libra-4.toml  metadata_libra-5.toml  metadata_libra-6.toml  metadata_libra-7.toml  metadata_libra_9ffd93b-0.toml  metadata_libra_9ffd93b-1.toml  metadata_libra_9ffd93b-2.toml  metadata_libra_9ffd93b-3.toml  metadata_libra_9ffd93b-4.toml  metadata_libra_9ffd93b-5.toml  metadata_libra_9ffd93b-6.toml  metadata_libra_9ffd93b-7.toml  metadata_libra_f0091a4-0.toml  metadata_libra_f0091a4-1.toml  metadata_libra_f0091a4-2.toml  metadata_libra_f0091a4-3.toml  metadata_libra_f0091a4-4.toml  metadata_libra_f0091a4-5.toml  metadata_libra_f0091a4-6.toml  metadata_libra_f0091a4-7.toml  mnemos_b3b4da9-0.toml  mnemos_b3b4da9-1.toml  mnemos_b3b4da9-2.toml  mnemos_b3b4da9-3.toml  mnemos_b3b4da9-4.toml  mnemos_b3b4da9-5.toml  mnemos_b3b4da9-6.toml  mnemos_b3b4da9-7.toml
fixtures/small/: metadata_cycle1_windows.json  metadata_cycle1_windows_different_drives.json  metadata_default_members.json
fixtures/small/hakari/: metadata1-0.toml  metadata1-1.toml  metadata1-2.toml  metadata1-3.toml  metadata2-0.toml  metadata2-1.toml  metadata2-2.toml  metadata2-3.toml  metadata_alternate_registries-0.toml  metadata_alternate_registries-1.toml  metadata_alternate_registries-2.toml  metadata_alternate_registries-3.toml  metadata_build_targets1-0.toml  metadata_build_targets1-1.toml  metadata_build_targets1-2.toml  metadata_build_targets1-3.toml  metadata_builddep-0.toml  metadata_builddep-1.toml  metadata_builddep-2.toml  metadata_builddep-3.toml  metadata_cycle1-0.toml  metadata_cycle1-1.toml  metadata_cycle1-2.toml  metadata_cycle1-3.toml  metadata_cycle2-0.toml  metadata_cycle2-1.toml  metadata_cycle2-2.toml  metadata_cycle2-3.toml  metadata_cycle_features-0.toml  metadata_cycle_features-1.toml  metadata_cycle_features-2.toml  metadata_cycle_features-3.toml  metadata_dups-0.toml  metadata_dups-1.toml  metadata_dups-2.toml  metadata_dups-3.toml  metadata_proc_macro1-0.toml  metadata_proc_macro1-1.toml  (+10 more)
fixtures/src/: dep_helpers.rs  details.rs  json.rs
guppy/: CHANGELOG.md  Cargo.toml  README.md  README.tpl
guppy-cmdlib/: Cargo.toml
guppy-cmdlib/src/: lib.rs  proptest.rs
guppy-summaries/: CHANGELOG.md  Cargo.toml  README.md  README.tpl
guppy-summaries/src/: diff.rs  errors.rs  lib.rs  report.rs  summary.rs
guppy/examples/: cargo_set_link_filter.rs  deps.rs  print_by_level.rs  remove_dev_only.rs
guppy/src/: errors.rs  lib.rs  metadata_command.rs  package_id.rs  sorted_set.rs
guppy/tests/: serde_roundtrip.rs
internal-tools/cargo-compare/: Cargo.toml
internal-tools/fixture-manager/: Cargo.toml
target-spec/: CHANGELOG.md  Cargo.toml  README.md  build.rs
target-spec-miette/: CHANGELOG.md  Cargo.toml  README.md
target-spec-miette/src/: fixtures.rs  lib.rs
target-spec/src/: custom.rs  custom_cfg.rs  errors.rs  lib.rs  platform.rs  simple_eval.rs  spec.rs  summaries.rs  triple.rs
tools/cargo-hakari/: CHANGELOG.md  Cargo.toml  README.md  README.tpl
tools/determinator/: CHANGELOG.md  Cargo.toml  README.md  README.tpl
tools/hakari/: CHANGELOG.md  Cargo.toml  README.md  README.tpl
(+23361 files in other folders)
