[workspace]
resolver = "2"
members = [
    "cargo-guppy",
    "fixtures",
    "guppy",
    "guppy-cmdlib",
    "guppy-summaries",
    "internal-tools/benchmarks",
    "internal-tools/cargo-compare",
    "internal-tools/fixture-manager",
    "internal-tools/proptest-ext",
    "target-spec",
    "target-spec-miette",
    "tools/cargo-hakari",
    "tools/determinator",
    "tools/hakari",
    "workspace-hack",
]

[workspace.dependencies]
ahash = "0.8.7"
guppy-workspace-hack = "0.1.0"

[workspace.package]
rust-version = "1.73"

[patch.crates-io.guppy-workspace-hack]
path = "workspace-hack"

# Recommended for color-eyre
[profile.dev.package.backtrace]
opt-level = 3

# Build guppy in opt mode for tests, speeding up test runs
[profile.test.package.guppy]
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true
