[package]
name = "cargo-guppy"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>", "Brandon Williams <bmwill@fb.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
camino = "1.1.6"
# disable tracing integration since we don't use it
color-eyre = { version = "0.6.2", default-features = false }
clap = { version = "3.2.25", features = ["derive"] }
dialoguer = "0.10.4"
guppy = { version = "0.17.1", path = "../guppy", features = ["summaries"] }
guppy-cmdlib = { path = "../guppy-cmdlib" }
itertools = "0.11.0"
pathdiff = { version = "0.2.1", features = ["camino"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
toml_edit = "0.17.1"
guppy-workspace-hack.workspace = true
