[package]
name = "cargo-guppy"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>", "Brandon Williams <bmwill@fb.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
ahash.workspace = true
camino = "1.1.7"
# disable tracing integration since we don't use it
color-eyre = { version = "0.6.3", default-features = false }
clap = { version = "3.2.25", features = ["derive"] }
dialoguer = "0.11.0"
guppy = { version = "0.17.10", path = "../guppy", features = ["summaries"] }
guppy-cmdlib = { path = "../guppy-cmdlib" }
itertools = "0.13.0"
pathdiff = { version = "0.2.1", features = ["camino"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.133"
toml_edit = "0.17.1"
guppy-workspace-hack.workspace = true
