[package]
name = "cargo-guppy"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>", "Brandon Williams <bmwill@fb.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
ahash.workspace = true
camino = "1.2.1"
# disable tracing integration since we don't use it
color-eyre = { version = "0.6.5", default-features = false }
clap = { version = "4.5.49", features = ["derive"] }
dialoguer = "0.11.0"
guppy = { version = "0.17.25", path = "../guppy", features = ["summaries"] }
guppy-cmdlib = { path = "../guppy-cmdlib" }
itertools = "0.14.0"
pathdiff = { version = "0.2.3", features = ["camino"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml_edit = "0.22.26"
guppy-workspace-hack.workspace = true
