[package]
name = "fixtures"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>"]
publish = false
edition = "2018"

[dependencies]
camino = "1.1.4"
guppy = { path = "../guppy" }
once_cell = "1.17.2"
pathdiff = "0.2.1"
pretty_assertions = "1.3.0"
guppy-workspace-hack = { version = "0.1", path = "../workspace-hack" }
