[package]
name = "fixtures"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>"]
publish = false
edition = "2018"

[dependencies]
ahash.workspace = true
camino = "1.1.6"
guppy = { path = "../guppy" }
once_cell = "1.18.0"
pathdiff = "0.2.1"
pretty_assertions = "1.4.0"
guppy-workspace-hack.workspace = true
