[package]
name = "fixtures"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>"]
publish = false
edition = "2024"

[dependencies]
ahash.workspace = true
camino = "1.1.9"
guppy = { path = "../guppy" }
once_cell = "1.20.3"
pathdiff = "0.2.3"
pretty_assertions = "1.4.1"
guppy-workspace-hack.workspace = true
