[package]
name = "guppy-cmdlib"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>"]
description = "CLI library for guppy"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# disable tracing integration since we don't use it
clap = { version = "3.2.25", features = ["derive"] }
color-eyre = { version = "0.6.2", default-features = false }
guppy = { path = "../guppy" }
proptest = { version = "1.4.0", optional = true }
guppy-workspace-hack.workspace = true

[features]
proptest1 = ["proptest", "guppy/proptest1"]
