[package]
name = "guppy-summaries"
version = "0.7.1"
description = "Build summaries for Cargo, created by guppy."
documentation = "https://docs.rs/guppy-summaries"
repository = "https://github.com/guppy-rs/guppy"
authors = ["Rain <rain1@fb.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cargo", "dependencies", "guppy", "summaries"]
categories = [
    "config",
    "data-structures",
    "development-tools",
    "parser-implementations",
]
edition = "2024"
exclude = [
    # Readme template that doesn't need to be included.
    "README.tpl",
]
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
ahash = "0.8.12"
camino = { version = "1.2.1", features = ["serde1"] }
cfg-if = "1.0.3"
diffus = "0.10.0"
toml = { version = "0.9.12", features = ["preserve_order"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
guppy-workspace-hack.workspace = true

[dev-dependencies]
indoc = "2.0.7"
pretty_assertions = "1.4.1"
serde_json = "1.0.145"
