[package]
name = "guppy"
version = "0.15.0"
description = "Track and query Cargo dependency graphs."
documentation = "https://docs.rs/guppy"
repository = "https://github.com/guppy-rs/guppy"
authors = ["Rain <rain1@fb.com>", "Brandon Williams <bmwill@fb.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cargo", "dependencies", "graph", "guppy"]
categories = [
    "config",
    "data-structures",
    "development-tools",
    "parser-implementations",
]
edition = "2021"
exclude = [
    # Readme template that doesn't need to be included.
    "README.tpl",
]
rust-version = "1.58"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=doc_cfg"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
camino = "1.1.1"
cargo_metadata = "0.15.2"
cfg-if = "1.0.0"
debug-ignore = "1.0.3"
guppy-summaries = { version = "0.7.1", path = "../guppy-summaries", optional = true }
fixedbitset = { version = "0.4.2", default-features = false }
nested = "0.1.1"
indexmap = "1.9.2"
itertools = "0.10.5"
once_cell = "1.16.0"
pathdiff = { version = "0.2.1", features = ["camino"] }
petgraph = { version = "0.6.2", default-features = false }
proptest = { version = "1.0.0", optional = true }
proptest-derive = { version = "0.3.0", optional = true }
rayon = { version = "1.6.0", optional = true }
semver = "1.0.14"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
smallvec = "1.10.0"
static_assertions = "1.1.0"
target-spec = { version = "1.2.2", path = "../target-spec" }
toml = { version = "0.5.9", optional = true, features = ["preserve_order"] }
guppy-workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
fixtures = { path = "../fixtures" }
pretty_assertions = "1.3.0"

[features]
proptest1 = ["proptest", "proptest-derive", "target-spec/proptest1"]
rayon1 = ["rayon"]
summaries = ["guppy-summaries", "target-spec/summaries", "toml"]
