[package]
name = "guppy"
version = "0.17.1"
description = "Track and query Cargo dependency graphs."
documentation = "https://docs.rs/guppy"
repository = "https://github.com/guppy-rs/guppy"
authors = ["Rain <rain1@fb.com>", "Brandon Williams <bmwill@fb.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cargo", "dependencies", "graph", "guppy"]
categories = [
    "config",
    "data-structures",
    "development-tools",
    "parser-implementations",
]
edition = "2021"
exclude = [
    # Readme template that doesn't need to be included.
    "README.tpl",
]
rust-version = "1.70"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=doc_cfg"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
camino = "1.1.6"
cargo_metadata = "0.18.1"
cfg-if = "1.0.0"
debug-ignore = "1.0.5"
guppy-summaries = { version = "0.7.1", path = "../guppy-summaries", optional = true }
fixedbitset = { version = "0.4.2", default-features = false }
nested = "0.1.1"
indexmap = "2.1.0"
itertools = "0.11.0"
once_cell = "1.18.0"
pathdiff = { version = "0.2.1", features = ["camino"] }
petgraph = { version = "0.6.4", default-features = false }
proptest = { version = "1.2.0", optional = true }
proptest-derive = { version = "0.4.0", optional = true }
rayon = { version = "1.8.0", optional = true }
semver = "1.0.20"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
smallvec = "1.11.2"
static_assertions = "1.1.0"
target-spec = { version = "3.0.1", path = "../target-spec" }
toml = { version = "0.5.11", optional = true, features = ["preserve_order"] }
guppy-workspace-hack.workspace = true

[dev-dependencies]
fixtures = { path = "../fixtures" }
pretty_assertions = "1.4.0"

[features]
proptest1 = ["proptest", "proptest-derive", "target-spec/proptest1"]
rayon1 = ["rayon"]
summaries = ["guppy-summaries", "target-spec/summaries", "toml"]
