[package]
name = "target-spec-miette"
version = "0.3.0"
description = "Integrate target-spec errors with the miette library"
documentation = "https://docs.rs/target-spec-miette"
repository = "https://github.com/guppy-rs/guppy"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cargo", "targets", "platforms", "miette"]
categories = ["development-tools"]
edition = "2021"
rust-version = "1.70"

[dependencies]
target-spec = { version = "3.0.1", path = "../target-spec" }
miette = "5.10.0"
guppy-workspace-hack.workspace = true
