[package]
name = "target-spec-miette"
version = "0.4.0"
description = "Integrate target-spec errors with the miette library"
documentation = "https://docs.rs/target-spec-miette"
repository = "https://github.com/guppy-rs/guppy"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cargo", "targets", "platforms", "miette"]
categories = ["development-tools"]
edition = "2021"
rust-version.workspace = true

[dependencies]
target-spec = { version = "3.1.0", path = "../target-spec" }
miette.workspace = true
guppy-workspace-hack.workspace = true

[lints]
workspace = true
