[package]
name = "target-spec-miette"
version = "0.4.0"
description = "Integrate target-spec errors with the miette library"
documentation = "https://docs.rs/target-spec-miette"
repository = "https://github.com/guppy-rs/guppy"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cargo", "targets", "platforms", "miette"]
categories = ["development-tools"]
edition = "2021"
rust-version.workspace = true

[dependencies]
target-spec = { version = "3.2.2", path = "../target-spec" }
miette.workspace = true
guppy-workspace-hack.workspace = true

[dev-dependencies]
datatest-stable.workspace = true
insta.workspace = true
miette = { workspace = true, features = ["fancy"] }
target-spec = { version = "3.2.2", path = "../target-spec", features = ["custom"] }

[lints]
workspace = true

[[test]]
name = "snapshot"
harness = false
