[package]
name = "target-spec"
version = "3.0.1"
description = "Evaluate Cargo.toml target specifications"
documentation = "https://docs.rs/target-spec"
repository = "https://github.com/guppy-rs/guppy"
authors = ["Jack Moffitt <metajack@fb.com>", "Rain <rain1@fb.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cargo", "targets", "platforms", "os", "cpu"]
categories = ["development-tools", "parser-implementations"]
edition = "2021"
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=doc_cfg"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
cfg-expr = { version = "0.15.6", features = ["targets"] }
proptest = { version = "1.4.0", optional = true }
serde = { version = "1.0.193", optional = true, features = ["derive"] }
serde_json = { version = "1.0.108", optional = true }
target-lexicon = { version = "0.12.12", features = ["std"] }
unicode-ident = "1.0.12"
guppy-workspace-hack.workspace = true

[dev-dependencies]
rustc_version = "0.4.0"
test-case = "3.3.1"
toml = "0.5.11"

[features]
custom = ["dep:serde", "dep:serde_json"]
proptest1 = ["proptest"]
summaries = ["dep:serde"]
