[package]
name = "cargo-compare"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.99"
cargo = { version = "0.90.0", features = ["vendored-libgit2"] }
clap = { version = "3.2.25", features = ["derive"] }
color-eyre = { version = "0.6.5", default-features = false }
diffus = "0.10.0"
either = "1.15.0"
fs_extra = "1.3.0"
itertools = "0.14.0"
guppy = { path = "../../guppy" }
guppy-cmdlib = { path = "../../guppy-cmdlib", features = ["proptest1"] }
tempfile = "3.20.0"
once_cell = "1.21.3"
pathdiff = "0.2.3"
proptest = "1.7.0"
