[package]
name = "fixture-manager"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
camino = "1.1.4"
clap = "4.3.4"
guppy = { path = "../../guppy", features = ["proptest1", "summaries"] }
guppy-cmdlib = { path = "../../guppy-cmdlib", features = ["proptest1"] }
fixtures = { path = "../../fixtures" }
hakari = { path = "../../tools/hakari", features = ["cli-support", "proptest1"] }
once_cell = "1.18.0"
proptest = "1.2.0"
proptest-ext = { path = "../proptest-ext" }
structopt = "0.3.26"
guppy-workspace-hack = { version = "0.1", path = "../../workspace-hack" }
