[package]
name = "fixture-manager"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
camino = "1.2.1"
clap = { version = "4.5.48", features = ["derive"] }
guppy = { path = "../../guppy", features = ["proptest1", "summaries"] }
guppy-cmdlib = { path = "../../guppy-cmdlib", features = ["proptest1"] }
fixtures = { path = "../../fixtures" }
hakari = { path = "../../tools/hakari", features = ["cli-support", "proptest1"] }
once_cell = "1.21.3"
proptest = "1.7.0"
proptest-ext = { path = "../proptest-ext" }
guppy-workspace-hack.workspace = true
