[package]
name = "cargo-hakari"
version = "0.9.29"
description = "Manage workspace-hack packages to speed up builds in large workspaces."
documentation = "https://docs.rs/cargo-hakari"
edition = "2021"
repository = "https://github.com/guppy-rs/guppy"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [
    "cargo",
    "dependencies",
    "workspace-hack",
    "feature-unification",
    "guppy",
]
categories = ["development-tools::cargo-plugins"]
rust-version.workspace = true

[dependencies]
camino = "1.1.6"
cfg-if = "1.0.0"
clap = { version = "4.3.19", features = ["derive"] }
# disable tracing integration since we don't use it
color-eyre = { version = "0.6.2", default-features = false }
dialoguer = "0.11.0"
duct = "0.13.7"
enable-ansi-support = "0.2.1"
env_logger = "0.11.1"
guppy = { version = "0.17.5", path = "../../guppy" }
hakari = { version = "0.17.2", path = "../hakari", features = ["cli-support"] }
log = "0.4.20"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
supports-color = "1.3.1"
guppy-workspace-hack.workspace = true

[dev-dependencies]
tempfile = "3.9.0"

# Metadata for cargo-binstall to get the right artifacts.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/cargo-hakari-{ version }/{ name }-{ version }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

# Mac x86_64 and aarch64 use the same universal binary.
[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/cargo-hakari-{ version }/{ name }-{ version }-universal-apple-darwin.tar.gz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/cargo-hakari-{ version }/{ name }-{ version }-universal-apple-darwin.tar.gz"
