[package]
name = "cargo-hakari"
version = "0.9.36"
description = "Manage workspace-hack packages to speed up builds in large workspaces."
documentation = "https://docs.rs/cargo-hakari"
edition = "2024"
repository = "https://github.com/guppy-rs/guppy"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [
    "cargo",
    "dependencies",
    "workspace-hack",
    "feature-unification",
    "guppy",
]
categories = ["development-tools::cargo-plugins"]
rust-version.workspace = true

[dependencies]
camino = "1.1.10"
cfg-if = "1.0.1"
clap = { version = "4.5.30", features = ["derive"] }
# disable tracing integration since we don't use it
color-eyre = { version = "0.6.5", default-features = false }
dialoguer = "0.11.0"
duct = "0.13.7"
enable-ansi-support = "0.2.1"
env_logger = "0.11.8"
guppy = { version = "0.17.19", path = "../../guppy" }
hakari = { version = "0.17.8", path = "../hakari", features = ["cli-support"] }
log = "0.4.27"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
supports-color = "1.3.1"
guppy-workspace-hack.workspace = true

[dev-dependencies]
tempfile = "3.20.0"

# Metadata for cargo-binstall to get the right artifacts.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/cargo-hakari-{ version }/{ name }-{ version }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

# Mac x86_64 and aarch64 use the same universal binary.
[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/cargo-hakari-{ version }/{ name }-{ version }-universal-apple-darwin.tar.gz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/cargo-hakari-{ version }/{ name }-{ version }-universal-apple-darwin.tar.gz"
