[package]
name = "determinator"
version = "0.10.0"
description = "Figure out which packages changed between two commits to a workspace."
documentation = "https://docs.rs/determinator"
authors = ["Rain <rain1@fb.com>"]
edition = "2021"
repository = "https://github.com/guppy-rs/guppy"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [
    "cargo",
    "guppy",
    "determinator",
    "package-changes",
    "build-caching",
]
categories = ["config", "development-tools"]
include = [
    "README.md",
    "**/*.rs",
    # Include default rules with the package.
    "default-rules.toml",
]
rust-version = "1.66"

[dependencies]
camino = "1.1.4"
globset = "0.4.10"
guppy = { version = "0.15.2", path = "../../guppy", features = [
    "rayon1",
    "summaries",
] }
once_cell = "1.17.1"
petgraph = { version = "0.6.3", default-features = false, features = [
    "graphmap",
] }
rayon = "1.7.0"
serde = { version = "1.0.160", features = ["derive"] }
toml = "0.5.11"
guppy-workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
fixtures = { path = "../../fixtures" }
cfg-if = "1.0.0"
