[package]
name = "determinator"
version = "0.12.0"
description = "Figure out which packages changed between two commits to a workspace."
documentation = "https://docs.rs/determinator"
authors = ["Rain <rain1@fb.com>"]
edition = "2021"
repository = "https://github.com/guppy-rs/guppy"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [
    "cargo",
    "guppy",
    "determinator",
    "package-changes",
    "build-caching",
]
categories = ["config", "development-tools"]
include = [
    "README.md",
    "**/*.rs",
    # Include default rules with the package.
    "default-rules.toml",
]
rust-version.workspace = true

[dependencies]
ahash.workspace = true
camino = "1.1.6"
globset = "0.4.14"
guppy = { version = "0.17.5", path = "../../guppy", features = [
    "rayon1",
    "summaries",
] }
once_cell = "1.19.0"
petgraph = { version = "0.6.4", default-features = false, features = [
    "graphmap",
] }
rayon = "1.8.1"
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.5.11"
guppy-workspace-hack.workspace = true

[dev-dependencies]
fixtures = { path = "../../fixtures" }
cfg-if = "1.0.0"
