[package]
name = "hakari"
version = "0.15.0"
description = "Manage workspace-hack packages that do feature unification inside workspaces."
documentation = "https://docs.rs/hakari"
edition = "2021"
repository = "https://github.com/guppy-rs/guppy"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [
    "cargo",
    "dependencies",
    "workspace-hack",
    "feature-unification",
    "guppy",
]
categories = ["development-tools"]
rust-version = "1.66"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=doc_cfg"]

[dependencies]
atomicwrites = "0.4.1"
bimap = "0.6.3"
camino = "1.1.6"
cfg-if = "1.0.0"
debug-ignore = "1.0.5"
diffy = "0.3.0"
guppy = { version = "0.17.0", path = "../../guppy", features = ["rayon1"] }
include_dir = { version = "0.7.3", features = ["glob"], optional = true }
indenter = "0.3.3"
itertools = "0.11.0"
owo-colors = { version = "3.5.0", optional = true }
pathdiff = { version = "0.2.1", features = ["camino"] }
proptest = { version = "1.2.0", optional = true }
proptest-derive = { version = "0.3.0", optional = true }
rayon = "1.7.0"
serde = { version = "1.0.178", features = ["derive"], optional = true }
tabular = { version = "0.2.0", features = ["ansi-cell"], optional = true }
target-spec = { version = "3.0.1", path = "../../target-spec" }
toml = { version = "0.5.11", optional = true }
toml_edit = "0.17.1"
twox-hash = { version = "1.6.3", default-features = false }
guppy-workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
fixtures = { path = "../../fixtures" }

[features]
proptest1 = ["proptest", "proptest-derive", "guppy/proptest1"]
cli-support = [
    "guppy/summaries",
    "include_dir",
    "owo-colors",
    "serde",
    "tabular",
    "toml",
]
