[package]
name = "hakari"
version = "0.17.8"
description = "Manage workspace-hack packages that do feature unification inside workspaces."
documentation = "https://docs.rs/hakari"
edition = "2024"
repository = "https://github.com/guppy-rs/guppy"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [
    "cargo",
    "dependencies",
    "workspace-hack",
    "feature-unification",
    "guppy",
]
categories = ["development-tools"]
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=doc_cfg"]

[lints]
workspace = true

[dependencies]
ahash = "0.8.12"
atomicwrites = "0.4.4"
camino = "1.2.0"
cfg-if = "1.0.3"
debug-ignore = "1.0.5"
diffy = "0.4.2"
guppy = { version = "0.17.21", path = "../../guppy", features = ["rayon1"] }
iddqd.workspace = true
include_dir = { version = "0.7.4", features = ["glob"], optional = true }
indenter = "0.3.4"
itertools = "0.14.0"
owo-colors = { version = "3.5.0", optional = true }
pathdiff = { version = "0.2.3", features = ["camino"] }
proptest = { version = "1.7.0", optional = true }
proptest-derive = { version = "0.5.1", optional = true }
rayon = "1.10.0"
serde = { version = "1.0.223", features = ["derive"], optional = true }
tabular = { version = "0.2.0", features = ["ansi-cell"], optional = true }
target-spec = { version = "3.5.1", path = "../../target-spec" }
toml = { version = "0.5.11", optional = true }
toml_edit = "0.22.26"
twox-hash.workspace = true
guppy-workspace-hack.workspace = true

[dev-dependencies]
fixtures = { path = "../../fixtures" }

[features]
proptest1 = ["proptest", "proptest-derive", "guppy/proptest1"]
cli-support = [
    "guppy/summaries",
    "include_dir",
    "owo-colors",
    "serde",
    "tabular",
    "toml",
]
